--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "unity.unity-debug"
+        "unity.unity-debug",
+        "visualstudiotoolsforunity.vstuc"
     ]
 }
